2013-07-05  Andy Buckley  <andy.buckley@cern.ch>

	* Many improvements to the creategrids migration script.

	* Populating many of the for-migration PDF entries in pdfsets.index.

	* Changing .lha data file extension to .dat to avoid clashing with LHA archive format.

2013-07-04  Andy Buckley  <andy.buckley@cern.ch>

	* Write out AlphaS_Ipol info from creategrids if possible.

	* Use a more accurate MZ in lhapdf.conf and creategrids.

	* Add handling of MinLHAPDFVersion and DataVersion flags if present.

	* Fix LHAPDF_VERSION_CODE to be an int rather than string.

	* Renaming Info::metadata() to Info::get_entry(), plus Info::get_entry_as(), etc.

2013-07-03  Andy Buckley  <andy.buckley@cern.ch>

	* Adding two PDF-level Info factory functions.

	* Using the cached/precomputed log(x) and log(Q2) values in the
	log-bicubic interpolator. Looks like an immediate factor of 5
	speed-up :-D

	* Adding log(x) and log(Q2) knot position accessors to KnotArray1F and KnotArrayNF.

	* Adding log(x) and log(Q2) knot position arrays to KnotArray1F.

	* Converting the KnotArrayNF typedef to be a fully-fledged class.

2013-06-19  Andy Buckley  <andy.buckley@cern.ch>

	* 6.0.0b2 release.

	* TODO list updated.

	* Adding PDFSet.mkPDF(mem) to the Python wrapper.

	* Various build tweaks for lxplus6 compatibility.

	* Reworking the connection of AlphaS to the Factory and PDF system
	a bit, and tweaking the tests.

2013-06-15  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Config.h, the Config class, and improved singleton
	mechanism for getting the global configuration object. Plus some
	testing of the globalness and persistency of config settings in
	tests/testinfo.cc

2013-06-12  Andy Buckley  <andy.buckley@cern.ch>

	* Mapping addition of PDFSet, more factory functions, and related changes into Python.

2013-06-11  Andy Buckley  <andy.buckley@cern.ch>

	* Adding default values to PDF::xMin/Max and PDF::q2Min/Max.

2013-06-10  Andy Buckley  <andy.buckley@cern.ch>
