@@ -1,3 +1,7 @@
+2013-07-08  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding fallback/default-return variants of the Info get_entry and get_entry_as methods.
+
 2013-07-05  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Many improvements to the creategrids migration script.
